--- a/src/main/resources/templates/post_detail.html
+++ b/src/main/resources/templates/post_detail.html
@@ -117,7 +117,11 @@
                 <div class="flex gap-4">
                     <a th:href="@{/posts/{no}/edit(no=${post.no})}"
                         class="text-gray-400 hover:text-black transition-colors font-bold text-sm px-4 flex items-center">수정</a>
-                    <button class="text-red-400 hover:text-red-600 transition-colors font-bold text-sm px-4">삭제</button>
+                    <form th:action="@{/posts/{no}/delete(no=${post.no})}" method="post"
+                        onsubmit="return confirm('정말 삭제하시겠습니까?');" class="inline">
+                        <button type="submit"
+                            class="text-red-400 hover:text-red-600 transition-colors font-bold text-sm px-4">삭제</button>
+                    </form>
                 </div>
             </div>
         </div>
